--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
     </form>
   </section>
 
+  <!-- Search and Filters Section -->
+<section id="filters">
+  <input type="text" id="searchBar" placeholder="Search by book name or subject...">
+
+  <select id="categoryFilter">
+    <option value="">All Categories</option>
+    <option value="Physics">Physics</option>
+    <option value="Chemistry">Chemistry</option>
+    <option value="Biology">Biology</option>
+    <option value="Math">Math</option>
+  </select>
+
+  <input type="text" id="locationFilter" placeholder="Filter by location...">
+</section>
+<section id="bookList">
+ </section>
+
   <section class="book-listings">
     <h2>Available Books</h2>
     <div id="bookContainer" class="books-grid">
@@ -40,3 +57,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
