--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Welcome to <span class="brand">BookWave</span></h1>
-      <p>The dedicated marketplace for <strong>NEET</strong> & <strong>JEE</strong> aspirants to buy and sell books.</p>
-      <p><strong>Zero commission.</strong> Contact sellers directly and buy used books nearby.</p>
+  <header id="home">
+  <div class="hero-text">
+   <section class="hero-section" id="home">
+  <h1>Think X — The Book Hub for NEET & JEE</h1>
+  <p>Imagine your problems solved. Not by one IITian — but by the entire IIT ecosystem. <br>
+  And all this, at a cost less than a week's salary of a single IITian.</p>
+  <button onclick="scrollToPartners()">Explore Books Nearby</button>
+</section>
     </div>
   </header>
 
